BugFix : les widgets s'alignais par le bas

--- a/static/display.css
+++ b/static/display.css
@@ -33,6 +33,7 @@
 	box-shadow: #0078FF 0 0 15px inset;
 	height: 100%;
 	display: inline-block;
+	vertical-align: top;
 }
 
 #app-grid .row-apps .cel 
